--- a/browser/js/playlist/templates/playlist.html
+++ b/browser/js/playlist/templates/playlist.html
@@ -2,12 +2,12 @@
 <h2>Name your playlist:</h2>
 
 Title: <input name="name" type="text" ng-model="playlistInput.name" required ng-maxlength="16" >
-<button ng-click="addTitle()" ng-disabled="playlistForm.$invalid" ui-sref="playlists.songAdder">Add Song</button>
+<button ng-click="addTitle()" ng-disabled="playlistForm.$invalid" ui-sref="playlists.songAdder">Add</button>
 <div class="alert alert-warning" ng-show="playlistForm.name.$invalid && playlistForm.name.$touched">Please enter a name</div>
-<pre>
+<!-- <pre>
    {{ playlistForm | json}}
 </pre>
-
+ -->
 </form>
 
 <ui-view></ui-view>
