--- a/browser/js/artist/templates/artists.html
+++ b/browser/js/artist/templates/artists.html
@@ -1,10 +1,11 @@
 <div>
   <h3>Artists</h3>
-  <form>
-  <input ng-model="searchName">
-    </form><br />
+    <div class="panel input-group">
+      <span class="input-group-addon">Filter</span>
+      <input type="text" class="form-control" placeholder="by name" ng-model="nameSearch">
+    </div>
     <div class="list-group">
-      <div class="list-group-item" ng-repeat="artist in artists | filter: {name: searchName}">
+      <div class="list-group-item" ng-repeat="artist in artists | filter: { name: nameSearch }">
       <a ui-sref="artist({artistId: artist._id})">{{ artist.name }}</a>
     </div>
   </div>
